<resources>
    <string name="app_name">SumtingWong</string>
    <string name="ac">AC</string>
    <string name="del">DEL</string>
    <string name="divide">÷</string>
    <string name="multiply">×</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="subtract">-</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="add">+</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="equal">=</string>
    <string name="_0">0</string>
    <string name="dot">.</string>
    <string name="scientific_mode">Scientific Mode</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="log">log</string>
    <string name="ln">ln</string>
    <string name="pi">π</string>
    <string name="euler">e</string>
    <string name="back_to_basic_mode">Basic Mode</string>
    <string name="error">Invalid input</string>
    <string name="plus_minus">+/-</string>
    <string name="percent">%</string>
    <string name="mode_switch">switch</string>
    <string name="graphing_mode">Graphing Mode</string>
    <string name="left_parenthesis">(</string>
    <string name="right_parenthesis">)</string>
    <string name="memory_clear">mc</string>
    <string name="memory_add">m+</string>
    <string name="memory_subtract">m-</string>
    <string name="memory_recall">mr</string>
    <string name="_2nd">2nd</string>
    <string name="x_squared">x²</string>
    <string name="x_cubed">x³</string>
    <string name="x_to_the_power_of_y">xʸ</string>
    <string name="e_to_the_power_of_x">eˣ</string>
    <string name="_10_to_the_power_of_x">10ˣ</string>
    <string name="reciprocal_of_x">1/x</string>
    <string name="square_root_of_x">√x</string>
    <string name="cube_root_of_x">³√x</string>
    <string name="y_th_root_of_x">ʸ√x</string>
    <string name="base_10_logarithm">log₁₀</string>
    <string name="x_factorial">x!</string>
    <string name="enter_exponent">EE</string>
    <string name="random_num">Rand</string>
    <string name="sinh">sinh</string>
    <string name="cosh">cosh</string>
    <string name="tanh">tanh</string>
    <string name="rad">Rad</string>
</resources>