<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/app_name"
        app:titleTextColor="@color/white"/>

    <!-- Display Screen -->
    <TextView
        android:id="@+id/display"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:background="@android:color/black"
        android:gravity="end|bottom"
        android:padding="0dp"
        android:text="@string/_0"
        android:textColor="@android:color/white"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <!-- Buttons Grid -->
    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:columnCount="4"
        android:rowCount="5"
        android:useDefaultMargins="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/display"
        app:layout_constraintVertical_bias="0.0">

        <!-- Row 1 -->
        <Button
            android:id="@+id/button_ac"
            style="@style/CalculatorButtonLight"
            android:text="@string/ac"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            android:backgroundTint="@null"
            />

        <Button
            android:id="@+id/button_plus_minus"
            style="@style/CalculatorButtonLight"
            android:text="@string/plus_minus"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            android:backgroundTint="@null"
            />

        <Button
            android:id="@+id/button_percent"
            style="@style/CalculatorButtonLight"
            android:text="@string/percent"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            android:backgroundTint="@null"
            />

        <Button
            android:id="@+id/button_divide"
            style="@style/CalculatorButtonOrange"
            android:text="@string/divide"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            android:backgroundTint="@null"
            />

        <!-- Row 2 -->
        <Button
            android:id="@+id/button_7"
            style="@style/CalculatorButtonDark"
            android:text="@string/_7"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            android:backgroundTint="@null"
            />

        <Button
            android:id="@+id/button_8"
            style="@style/CalculatorButtonDark"
            android:text="@string/_8"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            android:backgroundTint="@null"
            />

        <Button
            android:id="@+id/button_9"
            style="@style/CalculatorButtonDark"
            android:text="@string/_9"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            android:backgroundTint="@null"
            />

        <Button
            android:id="@+id/button_multiply"
            style="@style/CalculatorButtonOrange"
            android:text="@string/multiply"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            android:backgroundTint="@null"
            />

        <!-- Row 3 -->
        <Button
            android:id="@+id/button_4"
            style="@style/CalculatorButtonDark"
            android:text="@string/_4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            android:backgroundTint="@null"
            />

        <Button
            android:id="@+id/button_5"
            style="@style/CalculatorButtonDark"
            android:text="@string/_5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            android:backgroundTint="@null"
            />

        <Button
            android:id="@+id/button_6"
            style="@style/CalculatorButtonDark"
            android:text="@string/_6"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            android:backgroundTint="@null"
            />

        <Button
            android:id="@+id/button_minus"
            style="@style/CalculatorButtonOrange"
            android:text="@string/subtract"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            android:backgroundTint="@null"
            />

        <!-- Row 4 -->
        <Button
            android:id="@+id/button_1"
            style="@style/CalculatorButtonDark"
            android:text="@string/_1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            android:backgroundTint="@null"
            />

        <Button
            android:id="@+id/button_2"
            style="@style/CalculatorButtonDark"
            android:text="@string/_2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            android:backgroundTint="@null"
            />

        <Button
            android:id="@+id/button_3"
            style="@style/CalculatorButtonDark"
            android:text="@string/_3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            android:backgroundTint="@null"
            />

        <Button
            android:id="@+id/button_plus"
            style="@style/CalculatorButtonOrange"
            android:text="@string/add"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            android:backgroundTint="@null"
            />

        <!-- Row 5 -->
        <ImageButton
            android:id="@+id/button_sci_mode"
            style="@style/CalculatorButtonDark"
            android:contentDescription="@string/mode_switch"
            android:scaleType="centerInside"
            android:padding="30dp"
            android:src="@drawable/ic_calculator"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            app:tint="@android:color/white"
            android:backgroundTint="@null"
            />

        <Button
            android:id="@+id/button_0"
            style="@style/CalculatorButtonDark"
            android:text="@string/_0"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            android:backgroundTint="@null"
            />

        <Button
            android:id="@+id/button_dot"
            style="@style/CalculatorButtonDark"
            android:text="@string/dot"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            android:backgroundTint="@null"
            />

        <Button
            android:id="@+id/button_equal"
            style="@style/CalculatorButtonOrange"
            android:text="@string/equal"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            android:backgroundTint="@null"
            />
    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>