<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_background"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/mode_basic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/back_to_basic_mode"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:padding="15dp"
        android:background="?attr/selectableItemBackground"/>

    <TextView
        android:id="@+id/mode_sci"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/scientific_mode"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:padding="15dp"
        android:background="?attr/selectableItemBackground"/>

    <TextView
        android:id="@+id/mode_graph"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/graphing_mode"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:padding="15dp"
        android:background="?attr/selectableItemBackground"/>
</LinearLayout>
